cabal-version:      2.4
name:               gossip-glomers
version:            0.1.0.0
author:             Alistair Bill
maintainer:         alistair.bill@gmail.com

library
    exposed-modules: Lib
    build-depends:
        base ^>=4.17.2.0,
        aeson,
        bytestring,
        lens,
        lens-aeson,
        mtl,
        text
    hs-source-dirs: src
    default-language: Haskell2010

executable echo
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.0,
        aeson,
        lens,
        mtl,
        text,
        gossip-glomers
    hs-source-dirs: app/echo
    default-language: Haskell2010
