cabal-version:      2.4
name:               gossip-glomers
version:            0.1.0.0

common common
  build-depends:
    base,
    relude
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedStrings
    TypeFamilies
    UndecidableInstances
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
      aeson,
      bytestring,
      deriving-aeson,
      generic-lens,
      lens,
      mtl,
      text-display,
      unliftio
  exposed-modules: StateRef, Maelstrom, Maelstrom.ErrorCode, Maelstrom.Union

executable echo
  import: common, executable
  main-is: Main.hs
  build-depends:
      aeson,
      mtl,
      generic-lens,
      lens,
      gossip-glomers
  hs-source-dirs: app/echo

executable unique-ids
  import: common, executable
  main-is: Main.hs
  build-depends:
      aeson,
      generic-lens,
      lens,
      mtl,
      text-display,
      gossip-glomers
  hs-source-dirs: app/unique-ids

executable broadcast
  import: common, executable
  main-is: Main.hs
  build-depends:
      aeson,
      containers,
      generic-lens,
      lens,
      mtl,
      random,
      gossip-glomers
  hs-source-dirs: app/broadcast

executable counter
  import: common, executable
  main-is: Main.hs
  build-depends:
      aeson,
      deriving-aeson,
      containers,
      generic-lens,
      lens,
      random,
      gossip-glomers
  hs-source-dirs: app/counter

executable kafka
  import: common, executable
  main-is: Main.hs
  build-depends:
      aeson,
      containers,
      mtl,
      generic-lens,
      lens,
      gossip-glomers
  hs-source-dirs: app/kafka

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends:
    hspec,
    aeson,
    deriving-aeson,
    gossip-glomers
  main-is: Spec.hs